Added a neato script that might make it possible to have a snake of an arbitrary length. Committing before I attempt to integrate it into the game.

--- a/EnlightSnake/Assembly-CSharp-Editor.csproj
+++ b/EnlightSnake/Assembly-CSharp-Editor.csproj
@@ -60,6 +60,12 @@
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\Cardboard\Resources\UI\CardboardReticleShader.shader" />
      <None Include="Assets\Cardboard\Resources\SolidColor.shader" />
+ <Reference Include="Assembly-UnityScript-firstpass">
+ <HintPath>C:/Users/samsc/Documents/FirstPersonSnake/EnlightSnake/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ </Reference>
+ <Reference Include="Assembly-UnityScript">
+ <HintPath>C:/Users/samsc/Documents/FirstPersonSnake/EnlightSnake/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
